style.css
*{
    margin: 0;
    box-sizing: border-box;
}
.open-sans, .popup {
    font-family: "Open Sans", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
    font-variation-settings:
    "width" 100;
    line-height: 200%;
}

body{
    background-color: var(--background-color);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
:root{
    --main-color: #000;
    --secondary-color: #10B981;
    --result-background-color: #273549;
    --background-color: #1C1C1C;
    --font-color: white;
    --container-background-color: #1F2937;
    --hr-color: #2F3E53;
}
h1 > strong{
    color: var(--secondary-color);
}
#generate{
    background-color: #10B981;
    padding: 10px 20px;
    width: 170px;
    color: var(--font-color);
    border-radius: 5px;
    border: none;
}
.container-range{
    display: flex;
    /*flex-direction: column;*/
    /*width: 100%;*/
    justify-content: space-between;
    /*align-items: center;*/
    flex-wrap: wrap;
    margin: 10px 0;
}

.container-results{
    display: flex;
    /*flex-direction: row;*/
    justify-content: space-between;
    /*align-items: start;*/
}
.result{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: var(--result-background-color);
    color: var(--font-color);
    padding: 10px;
    width: 48%;
    /*height: 40px;*/
    margin: 10px 0;
    border-radius: 5px;
}
.result:hover{
    background: var(--secondary-color);
    scale: 1.1;
}
.result:active{
    background: #128f68;
    scale: 1;
}
.container{
    display: flex;
    flex-direction: column;
    color: var(--font-color);
    align-items: center;
    margin-top: 50px;
    justify-content: center;
    padding: 10% 0;
    background-color: var(--container-background-color);
    height: 65%;
    width: 65%;
    max-width: 750px;
}
.hero-text{
    /*margin: 50px 0;*/
}
p{
    margin: 10px 0 50px 0;
    color: #808080;
}
hr{
    margin: 50px 0;
    color: var(--hr-color);
}
main{
    width: 90%;
}

@media (prefers-color-scheme: light) {
    :root{
        --main-color: #000;
        --secondary-color: #10B981;
        --result-background-color: #273549;
        --background-color: #1C1C1C;
        --font-color: #000;
        --container-background-color: #fff;
        --hr-color: #D5D4D8;
    }
    #generate {
        color: white;
    }
}
.popup{
    display: none;
    visibility: hidden;
    justify-content: center;
    align-items: center;
    color: var(--font-color);
    background-color: var(--result-background-color);
    padding: 10px;
    border-radius: 5px;
    position: absolute;
    bottom: 10%;
    left: 70%;

}

@media (max-device-width: 768px) {
    body{
        height: 100vh;
    }
    #generate{
        height: 6vh;
        font-size: 50px;
        width: 100%;
        border-radius: 12px;
    }
    .container{
        line-height: 400%;
        justify-content: start;
        width: 100%;
        max-width: 100%;
        margin-top: 0;
        padding: 5vh 0;
        height: 100%;
    }
    .main{
        width: 10vh;
        padding: 0;
    }
    .hero-text{

        font-size: 30px;
    }
    .container-range{
        flex-direction: row;
        flex-wrap: wrap;
        font-size: 40px;
        width: 70vw;
        text-align: center;

        output{
            width: 40px;
        }
        *{
            margin: 10px 0;
        }
        input[type="checkbox"]{
            width: 40px;
            height: 40px;
            margin-top: 25px;
        }
        input[type="range"]{
            width: 70vw;
            height: 40px;
        }

    }
    .container-results{
        flex-direction: column;
        flex-wrap: wrap;
        font-size: 40px;
        height: 40px;
    }
}

